# kurono-bot

./: .env.sample  .gitignore  Dockerfile  README.md  SETUP_GUIDE.md  docker-compose.yaml  pyproject.toml  sample_webhook_payloads.json
scripts/: sync_repositories.py  test_bot_integration.py  test_comment_connector.py
src/: __init__.py  config.py  main.py  repo_channels.py  repo_channels_test.py  webhook_test.py  ytdl_wrapper.py
src/comment_connecter/: README.md  __init__.py  comment_connecter.py  exceptions.py  utils.py
src/sync_channel/: README.md  __init__.py  sync_channel.py  test_synk_channel.py  utils.py
